discussion/kv_engine/177004/177004_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Reuse connection in metering tests

Reuse the same connection in the metering tests instead of
creating a new connection for each unit test

Change-Id: I8bb75157a98bb5cda50830d83ad5c1fd64d07d0c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 12:22:56.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 12:30:19.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47306/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47306/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39758/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39758/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8217/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8217/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8316/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8316/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20430/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20430/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20778/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20778/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21418/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21418/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28811/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28811/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19652/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19652/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18546/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:25:13: error: no template named "unique_ptr" in namespace "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18546/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:25:13:
error: no template named "unique_ptr" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18546/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17699/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
